--- a/src/content/pages/project-one.html
+++ b/src/content/pages/project-one.html
@@ -2,11 +2,9 @@
 title: 'Project One | Code Stitch Web Designs'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'project-one/'
+permalink: false
 eleventyNavigation:
-    key: Project One
-    order: 3100
-    parent: Projects
+ 
 ---
 
 {% extends "layouts/base.html" %}
