--- a/src/content/pages/project-two.html
+++ b/src/content/pages/project-two.html
@@ -2,11 +2,8 @@
 title: 'Project Two | Code Stitch Web Designs'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'project-two/'
+permalink: false
 eleventyNavigation:
-    key: Project Two
-    order: 3200
-    parent: Projects
 ---
 
 {% extends "layouts/base.html" %}
