--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@ eleventyNavigation:
         </picture>
         <div class="cs-content">
             <span class="cs-topper">Featured Service</span>
-            <h2 class="cs-title">Occupational and Speech Therapy</h2>
+            <h2 class="cs-title">Thai Hot Oil Deep Tissue Massage</h2>
             <p class="cs-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dicta officiis praesentium necessitatibus tempora unde quasi porro nemo aliquam voluptatem quaerat hic, doloremque impedit perferendis labore, ea libero voluptas laudantium? 
             </p>
@@ -152,7 +152,7 @@ eleventyNavigation:
         </picture>
         <div class="cs-content">
             <span class="cs-topper">Featured Service</span>
-            <h2 class="cs-title">Occupational and Speech Therapy</h2>
+            <h2 class="cs-title">Relaxing Thai Hot Oil Massage</h2>
             <p class="cs-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dicta officiis praesentium necessitatibus tempora unde quasi porro nemo aliquam voluptatem quaerat hic, doloremque impedit perferendis labore, ea libero voluptas laudantium? 
             </p>
@@ -197,17 +197,7 @@ eleventyNavigation:
                 <li class="cs-faq-item active">
                     <button class="cs-button">
                         <span class="cs-button-text">
-                            Do you have experience with car like mine?
-                        </span>
-                    </button>
-                    <p class="cs-item-p">
-                        In the U.S., the terms lawyer and attorney are often used interchangeably. A lawyer provides legal services such as giving legal advice, writing legal documents and providing policy counsel to governments. An attorney, on top of these things also holds a state or regional license to represent clients in a law court.
-                    </p>
-                </li>
-                <li class="cs-faq-item">
-                    <button class="cs-button">
-                        <span class="cs-button-text">
-                            What is your plan cancellation policy?
+                            Question 1
                         </span>
                     </button>
                     <p class="cs-item-p">
@@ -217,7 +207,7 @@ eleventyNavigation:
                 <li class="cs-faq-item">
                     <button class="cs-button">
                         <span class="cs-button-text">
-                            What professional certifications you have?
+                            Question 2
                         </span>
                     </button>
                     <p class="cs-item-p">
@@ -227,7 +217,7 @@ eleventyNavigation:
                 <li class="cs-faq-item">
                     <button class="cs-button">
                         <span class="cs-button-text">
-                            What professional certifications you have?
+                            Question 3
                         </span>
                     </button>
                     <p class="cs-item-p">
@@ -237,7 +227,17 @@ eleventyNavigation:
                 <li class="cs-faq-item">
                     <button class="cs-button">
                         <span class="cs-button-text">
-                            How much air pressure should I put my tires?
+                            Question 4
+                        </span>
+                    </button>
+                    <p class="cs-item-p">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit convallis nunc neque, bibendum pulvinar vitae commodo velit. Proin diam tortor sed malesuada nunc, habitant. Dignissim ipsum porta enim, magna urna, quam. 
+                    </p>
+                </li>
+                <li class="cs-faq-item">
+                    <button class="cs-button">
+                        <span class="cs-button-text">
+                            Question 5
                         </span>
                     </button>
                     <p class="cs-item-p">
