--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -27,7 +27,7 @@ eleventyNavigation:
             <span class="cs-topper">Contact Us</span>
             <h2 class="cs-title">Get in Touch</h2>
             <p class="cs-text">
-                We are a team of passionate and creative individuals dedicated to crafting captivating designs that leave a lasting impression.
+                Aqestic recusandae laudantium optio amet a quisquam saepe aliquid, voluptate praesentium dicta fuga Aqestic recusandae laudantium 
             </p>
             <ul class="cs-ul">
                 <li class="cs-li">
