--- a/src/content/pages/massages.html
+++ b/src/content/pages/massages.html
@@ -1,7 +1,6 @@
 ---
-title: 'Massages | Code Stitch Web Designs'
-description: 'Meta description for the page'
-preloadImg: '/assets/images/banner.jpg'
+title: 'Massages | Skipton Thai Massage'
+description: "Explore our range of professional Thai massage treatments in Skipton. From relaxing oil massage to deep tissue therapy, find the perfect treatment for your needs."
 permalink: 'massages/'
 eleventyNavigation:
     key: Massages
@@ -12,6 +11,7 @@ eleventyNavigation:
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/massages.css">
+    <link rel="preload" as="image" href="{% getUrl "/assets/images/banner.jpg" | resize({width: 2560, height: 1136}) | avif %}">
 {% endblock %}
 
 {% block body %}
