--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,7 +1,6 @@
 ---
-title: 'About | Code Stitch Web Designs'
-description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+title: 'About | Skipton Thai Massage'
+description: "Meet Yao, our skilled Thai massage therapist bringing traditional healing techniques to Skipton. Learn about our commitment to authentic Thai massage and professional excellence."
 permalink: 'about/'
 eleventyNavigation:
     key: About Us
@@ -12,6 +11,8 @@ eleventyNavigation:
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/about.css">
+    <link rel="preload" as="image" href="{% getUrl "/assets/images/banner.jpg" | resize({width: 2560, height: 1136}) | avif %}">
+
 {% endblock %}
 
 {% block body %}
@@ -37,29 +38,27 @@ eleventyNavigation:
             <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/about.jpg" | resize({width: 1260, height: 1550}) | jpeg %}" type="image/jpeg">
             <img src="{% getUrl "/assets/images/about.jpg" | resize({width: 1260, height: 1550}) | jpeg %}" alt="massage" width="630" height="775" loading="lazy" decoding="async" aria-hidden="true">
         </picture>
+
         <div class="cs-content">
-            <span class="cs-topper">Our Story</span>
             <h2 class="cs-title">About Skipton Thai Massage</h2>
             <p class="cs-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dicta officiis praesentium necessitatibus tempora unde quasi porro nemo aliquam voluptatem quaerat hic, doloremque impedit perferendis labore, ea libero voluptas laudantium? 
+                Yaorak (Yao) Mallinson, the founder of Skipton Thai Massage, comes from the historic province of Kanchanaburi in Thailand, known for its rich cultural heritage and natural beauty. Her journey into massage therapy began with a profound personal experience when she discovered the transformative benefits of Thai massage through a session with Teacher Jen.
             </p>
             <p class="cs-text">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                Since moving to the UK in 2006, Yao has embraced the opportunity to blend traditional Thai healing practices with modern therapeutic techniques. Her path to establishing Skipton Thai Massage was inspired by a genuine desire to help others experience the same healing and relief she had discovered herself. 
             </p>
             <p class="cs-text">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                Committed to excellence in her craft, Yao has pursued comprehensive training. She holds qualifications in Aroma Massage and Lymphatic Drainage Massage, combining these specialised techniques with traditional Thai massage methods. This unique blend of skills allows her to offer treatments that are both authentically Thai and therapeutically effective.
             </p>
             <p class="cs-text">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                At Skipton Thai Massage, we understand that each client's needs are unique. Whether you're seeking relief from chronic pain, looking to reduce stress, or simply wanting to enhance your overall wellbeing, our treatments are thoughtfully tailored to your individual requirements. 
             </p>
-            <div id="quote-827">
-                <span class="cs-quote-text">
-                    In consequat tincidunt turpis sit amet imperdiet. Praesent Classei consequat tincidunt turpis sit amet imperdiet for mind.
-                </span>
-                <span class="cs-name">Justin Time</span>
-                <span class="cs-job">CEO-Founder</span>
-                <img class="cs-quote-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="gavel" width="136" height="77">
-            </div>                        
+            <p class="cs-text">
+                Yao's dedication to her craft is reflected in every aspect of her practice. She takes pride in maintaining high standards of cleanliness and professionalism, ensuring each client receives the best possible care. Her growing reputation in Skipton is built on a foundation of genuine care for her clients' wellbeing and a commitment to delivering exceptional results.
+            </p>
+            <p class="cs-text">
+                We invite you to experience the authentic healing traditions of Thai massage in the heart of Skipton. Visit us today and take the first step towards improving your physical and mental wellbeing through the power of skilled therapeutic massage.
+            </p>     
         </div>
     </div>
 </section>
