--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -1,7 +1,6 @@
 ---
 title: 'Blog | Code Stitch Web Designs'
 description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
 permalink: false
 eleventyNavigation:
     
@@ -11,6 +10,7 @@ eleventyNavigation:
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/blog.css">
+    <link rel="preload" as="image" href="{% getUrl "/assets/images/banner.jpg" | resize({width: 2560, height: 1136}) | avif %}">
 {% endblock %}
 
 {% block body %}
