--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
 ---
-title: 'Pixel Perfect Websites | Code Stitch Web Designs | Denver, CO'
-description: 'Meta description for the page'
-preloadImg: '/assets/images/landing.jpg'
+title: 'Massage | Skipton Thai Massage | Skipton'
+description: "Discover authentic Thai massage in Skipton at our tranquil wellness studio. Professional treatments including traditional Thai, oil, and deep tissue massage to restore your wellbeing."
 permalink: '/'
 tags: 'sitemap' # Sitemap will use all pages in content/, due to content.json. As index.html is not included in content/ we need to manually add the sitemap tag to this page (only).
 eleventyNavigation:
@@ -15,6 +14,7 @@ eleventyNavigation:
     <link rel="stylesheet" href="/assets/css/local.css"/>
     <link rel="stylesheet" href="/assets/css/critical.css"/>
     <link rel="stylesheet" href="/assets/css/components.css"/>
+    <link rel="preload" as="image" href="{% getUrl "/assets/images/hero.jpg" | resize({width: 2250, height: 1500}) | avif %}">
 
     <!-- Script for Netlify Identity -->
     <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
@@ -112,12 +112,12 @@ eleventyNavigation:
             <span class="cs-topper">Featured Service</span>
             <h2 class="cs-title">Thai Hot Oil Deep Tissue Massage</h2>
             <p class="cs-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dicta officiis praesentium necessitatibus tempora unde quasi porro nemo aliquam voluptatem quaerat hic, doloremque impedit perferendis labore, ea libero voluptas laudantium? 
+                Combining traditional Thai techniques with warm aromatic oils, our deep tissue massage delivers profound therapeutic benefits. This specialised treatment uses firm, targeted pressure and expert hand movements to release chronic muscle tension and reach deeper layers of muscle tissue, whilst the warmth of the oil helps to soften tight muscles and enhance the healing process.
             </p>
             <p class="cs-text">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                This intensive massage is particularly beneficial for those suffering from stubborn knots, sports-related strains, or persistent muscle tightness. The carefully selected oils not only nourish your skin but also promote circulation and reduce inflammation, leaving you feeling deeply relaxed and renewed. Perfect for athletes, office workers, or anyone experiencing built-up muscle tension, this treatment helps restore mobility and provides lasting relief from muscular discomfort.
             </p>
-            <a href="{{client.onlineBooking}}" class="cs-button-solid">Learn More</a>
+            <a href="/deep-tissue/" class="cs-button-solid">Learn More</a>
         </div>
     </div>
 </section>
@@ -154,12 +154,12 @@ eleventyNavigation:
             <span class="cs-topper">Featured Service</span>
             <h2 class="cs-title">Relaxing Thai Hot Oil Massage</h2>
             <p class="cs-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dicta officiis praesentium necessitatibus tempora unde quasi porro nemo aliquam voluptatem quaerat hic, doloremque impedit perferendis labore, ea libero voluptas laudantium? 
+                Experience pure tranquillity with our gentle Thai oil massage, where warm, aromatic oils are combined with flowing, rhythmic movements to ease away tension. This soothing treatment uses light to medium pressure along with traditional Thai techniques to promote deep relaxation, whilst the carefully warmed oils help to nourish your skin and calm your mind.
             </p>
             <p class="cs-text">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                Perfect for those seeking a gentler approach to wellness, this nurturing massage helps reduce stress, improve sleep quality and restore natural balance. The harmonious blend of smooth, gliding strokes and therapeutic oils works to enhance circulation, ease muscle fatigue and create a profound sense of wellbeing. Ideal for newcomers to massage, those preferring a lighter touch, or anyone needing to unwind from the demands of daily life.
             </p>
-            <a href="" class="cs-button-solid">Learn More</a>
+            <a href="/oil-massage/" class="cs-button-solid">Learn More</a>
         </div>
     </div>
 </section>
@@ -197,63 +197,58 @@ eleventyNavigation:
                 <li class="cs-faq-item active">
                     <button class="cs-button">
                         <span class="cs-button-text">
-                            Question 1
+                            Do I need to book in advance?
                         </span>
                     </button>
                     <p class="cs-item-p">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit convallis nunc neque, bibendum pulvinar vitae commodo velit. Proin diam tortor sed malesuada nunc, habitant. Dignissim ipsum porta enim, magna urna, quam. 
+                        We do accept walk-ins, however, to avoid disappointment we recommend booking your session in advance.
                     </p>
                 </li>
                 <li class="cs-faq-item">
                     <button class="cs-button">
                         <span class="cs-button-text">
-                            Question 2
+                            Do you accept credit cards?
                         </span>
                     </button>
                     <p class="cs-item-p">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit convallis nunc neque, bibendum pulvinar vitae commodo velit. Proin diam tortor sed malesuada nunc, habitant. Dignissim ipsum porta enim, magna urna, quam. 
+                        No, we currently accept cash or bank transfers. 
                     </p>
                 </li>
                 <li class="cs-faq-item">
                     <button class="cs-button">
                         <span class="cs-button-text">
-                            Question 3
+                            What are your opening hours?
                         </span>
                     </button>
                     <p class="cs-item-p">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit convallis nunc neque, bibendum pulvinar vitae commodo velit. Proin diam tortor sed malesuada nunc, habitant. Dignissim ipsum porta enim, magna urna, quam. 
+                        We are open 7 days a week from 9AM to 7PM Last appointment is 6.30PM.
                     </p>
                 </li>
                 <li class="cs-faq-item">
                     <button class="cs-button">
                         <span class="cs-button-text">
-                            Question 4
+                            Can I eat before a massage?
                         </span>
                     </button>
                     <p class="cs-item-p">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit convallis nunc neque, bibendum pulvinar vitae commodo velit. Proin diam tortor sed malesuada nunc, habitant. Dignissim ipsum porta enim, magna urna, quam. 
+                        It’s best to avoid heavy meals before your session, but a light snack is fine. 
                     </p>
                 </li>
                 <li class="cs-faq-item">
                     <button class="cs-button">
                         <span class="cs-button-text">
-                            Question 5
+                            How often should I get a massage?
                         </span>
                     </button>
                     <p class="cs-item-p">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit convallis nunc neque, bibendum pulvinar vitae commodo velit. Proin diam tortor sed malesuada nunc, habitant. Dignissim ipsum porta enim, magna urna, quam. 
+                        It depends on your lifestyle and needs. For general wellness, once a month is ideal. For chronic tension, weekly sessions would help. 
                     </p>
                 </li>
             </ul>
         </div>
     </div>
 </section>
-
-<!-- ============================================ -->
-<!--                   Reviews                    -->
-<!-- ============================================ -->
-                                
-   
+                                 
 <script>const faqItems = Array.from(document.querySelectorAll('.cs-faq-item'));
     for (const item of faqItems) {
         const onClick = () => {
