--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@ eleventyNavigation:
             <p class="cs-text">
                 This intensive massage is particularly beneficial for those suffering from stubborn knots, sports-related strains, or persistent muscle tightness. The carefully selected oils not only nourish your skin but also promote circulation and reduce inflammation, leaving you feeling deeply relaxed and renewed. Perfect for athletes, office workers, or anyone experiencing built-up muscle tension, this treatment helps restore mobility and provides lasting relief from muscular discomfort.
             </p>
-            <a href="/deep-tissue/" class="cs-button-solid">Learn More</a>
+            <a href="/deep-tissue/" class="cs-button-solid">Deep Tissue Massage</a>
         </div>
     </div>
 </section>
@@ -159,7 +159,7 @@ eleventyNavigation:
             <p class="cs-text">
                 Perfect for those seeking a gentler approach to wellness, this nurturing massage helps reduce stress, improve sleep quality and restore natural balance. The harmonious blend of smooth, gliding strokes and therapeutic oils works to enhance circulation, ease muscle fatigue and create a profound sense of wellbeing. Ideal for newcomers to massage, those preferring a lighter touch, or anyone needing to unwind from the demands of daily life.
             </p>
-            <a href="/oil-massage/" class="cs-button-solid">Learn More</a>
+            <a href="/oil-massage/" class="cs-button-solid">Hot Oil Massage</a>
         </div>
     </div>
 </section>
